--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,18 @@
+annotated-types==0.7.0
+anyio==4.7.0
+exceptiongroup==1.2.2
 fastapi==0.100.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
 hypercorn==0.14.4
+hyperframe==6.0.1
+idna==3.10
+priority==2.0.0
+pydantic==2.10.4
+pydantic_core==2.27.2
+sniffio==1.3.1
+starlette==0.27.0
+tomli==2.2.1
+typing_extensions==4.12.2
+wsproto==1.2.0
