--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,36 @@
 annotated-types==0.7.0
 anyio==4.7.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
+distro==1.9.0
 exceptiongroup==1.2.2
 fastapi==0.100.0
+groq==0.13.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
+httpcore==1.0.7
+httpx==0.28.1
 hypercorn==0.14.4
 hyperframe==6.0.1
 idna==3.10
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain-core==0.3.28
+langchain-groq==0.2.2
+langsmith==0.2.4
+orjson==3.10.12
+packaging==24.2
 priority==2.0.0
 pydantic==2.10.4
 pydantic_core==2.27.2
+PyYAML==6.0.2
+requests==2.32.3
+requests-toolbelt==1.0.0
 sniffio==1.3.1
 starlette==0.27.0
+tenacity==9.0.0
 tomli==2.2.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 wsproto==1.2.0
